Updated, Service and gitignore file

--- a/CurrencyConverter/src/main/resources/api.yaml
+++ b/CurrencyConverter/src/main/resources/api.yaml
@@ -53,5 +53,9 @@ components:
           type: array
           items:
             type: string
+    URLTypes:
+      type: string
+      enum:
+        - CONVERT       
           
           
